@@ -1,2 +1,2 @@
-AppVersion = "LimeChat for OSX 0.12.1";
+AppVersion = "LimeChat for OSX 0.12.5";
 CtcpClientInfo = "DCC VERSION CLIENTINFO USERINFO PING TIME";
